    - Fixed: MediaElement Player download file problem. (#555)
    - Fixed: Presentation Style: Prevent link default behaviour (usability problem).
    - Fixed: Invalid XML in the JavaScript iDevices configuration files.
    - Fixed: "New version available" message always displayed in the PPA version. (#540)
    - Fixed: Add/Rename/Move page disabled when editing an iDevice. (#550)

  * Manuel Narváez
    - New iDevice category (Games):
      New iDevices: Lock, Challenge, Multiple Choice Quiz.
      New functionalities and bug fixes in: A-Z Quiz Game, QuExt, VideoQuExt, Word Guessing.
    - GeoGebra iDevice: 
      It works with ID, not only URL.
      Optional content after the activity.
      SCORM revision (not only 0 to 10 scores).
      New zoom option for big applets.
      New authorship option.
      The activity size is no longer required.

  * SDWeb
    - TinyMCE: New audio recorder plugin.
      Centro Integrado de Aprendizajes Virtuales y Digitalizados (BirtLH).
    - The "Advanced mode" is now a preference. It's saved in exe.conf instead of using a cookie. (#489)
    - Fixed: Available iDevices were not saved. (#530)
    - Fixed: Backward compatibility. Open an elp file reading its contentv2.xml file. (#206)

  * APSL
    - Package building.
    - Fixed: The default package license was not respected. (#547)
    - Fixed: Open elp with an incorrect contentv3.xml file (use the content.data file instead). (#545)
    - Fixed: Strange characters in the iDevice editor. (#535)
    - Fixed: Strange characters when adding a header background image. (#562)
    - Fixed: Package language changed when changing eXe's language. (#564)

  * Juan Rafael Fernández
    - String extraction process revision.
    - Translations coordination.

  * eXeLearning.net Translation Team
    - New complete Spanish translation, by Juan Rafael Fernández.
    - New complete Basque translation, by Joxemi Andonegi.
    - New complete Catalan translation, by Carles Ferrando Garcia.